fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Live_Education__c.field-meta.xml
<CustomField>
    <fullName>Live_Education__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Case 00009573</description>
    <inlineHelpText>Check if this was a live education.</inlineHelpText>
    <label>Live Education</label>
    <type>Checkbox</type>
</CustomField>