fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Location_of_Event__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Event__c</fullName>
    <inlineHelpText>Name of Restaurant, Conference Site, Classroom, and Address</inlineHelpText>
    <label>Physical Address of Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>