fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Manager_Clinical_Education__c.field-meta.xml
<CustomField>
    <fullName>Manager_Clinical_Education__c</fullName>
    <formula>RCEM__r.Manager_Name__c</formula>
    <inlineHelpText>RCEM&apos;s listed Manager on their User Record.</inlineHelpText>
    <label>Manager Clinical Education</label>
    <type>Text</type>
</CustomField>