fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Meals_Group__c.field-meta.xml
<CustomField>
    <fullName>Meals_Group__c</fullName>
    <label>Meals (Group)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>