fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/NeedsAssessmentReceived__c.field-meta.xml
<CustomField>
    <fullName>NeedsAssessmentReceived__c</fullName>
    <label>Needs Assessment Received</label>
    <type>Date</type>
</CustomField>