fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/New_Account_Dept_or_Update__c.field-meta.xml
<CustomField>
    <fullName>New_Account_Dept_or_Update__c</fullName>
    <label>New Account/Dept or Update?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Account</fullName>
            </value>
            <value>
                <fullName>New Department</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
            <value>
                <fullName>New Product Line</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>