fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <inlineHelpText>Contractor Updates Only</inlineHelpText>
    <label>Notes:</label>
    <length>25000</length>
    <type>LongTextArea</type>
</CustomField>