fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Number_Kits__c.field-meta.xml
<CustomField>
    <fullName>Number_Kits__c</fullName>
    <label>Number of Kits</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>