fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Number_Of_Attached_Files__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Attached_Files__c</fullName>
    <label>Number Of Attached Files</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>