fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Number_of_nights_needed__c.field-meta.xml
<CustomField>
    <fullName>Number_of_nights_needed__c</fullName>
    <label>Number of nights needed</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>