fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/of_Attendees__c.field-meta.xml
<CustomField>
    <fullName>of_Attendees__c</fullName>
    <label># of Attendees Hemorrhage</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>