fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/of_Attendees_EZ_IO__c.field-meta.xml
<CustomField>
    <fullName>of_Attendees_EZ_IO__c</fullName>
    <label># of Attendees EZ-IO</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>