fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/OnsiteSimulation__c.field-meta.xml
<CustomField>
    <fullName>OnsiteSimulation__c</fullName>
    <formula>TEXT( Account_Facility__r.OnsiteSimulation__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>On-site Simulation</label>
    <type>Text</type>
</CustomField>