fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Education Records</relationshipLabel>
    <relationshipName>Education_Records</relationshipName>
    <type>Lookup</type>
</CustomField>