fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Other_Audience__c.field-meta.xml
<CustomField>
    <fullName>Other_Audience__c</fullName>
    <inlineHelpText>pertains to Audience field selection of &quot;Other&quot;</inlineHelpText>
    <label>&quot;Other&quot; Audience Hemorrhage</label>
    <length>155</length>
    <type>Text</type>
</CustomField>