fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Other_Audience_EZ_IO__c.field-meta.xml
<CustomField>
    <fullName>Other_Audience_EZ_IO__c</fullName>
    <label>&quot;Other&quot; Audience EZ-IO</label>
    <length>155</length>
    <type>Text</type>
</CustomField>