fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Other_Department__c.field-meta.xml
<CustomField>
    <fullName>Other_Department__c</fullName>
    <inlineHelpText>pertains to Department field selection of &quot;Other&quot;</inlineHelpText>
    <label>&quot;Other&quot; Department</label>
    <length>155</length>
    <type>Text</type>
</CustomField>