fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Other_Detail_Policy_Vetting__c.field-meta.xml
<CustomField>
    <fullName>Other_Detail_Policy_Vetting__c</fullName>
    <label>Other Detail</label>
    <length>100</length>
    <type>Text</type>
</CustomField>