fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Other_In_Service__c.field-meta.xml
<CustomField>
    <fullName>Other_In_Service__c</fullName>
    <inlineHelpText>pertains to Type of In-service field selection of &quot;Other&quot;</inlineHelpText>
    <label>&quot;Other&quot; In-Service</label>
    <length>155</length>
    <type>Text</type>
</CustomField>