fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Other_Speaker__c.field-meta.xml
<CustomField>
    <fullName>Other_Speaker__c</fullName>
    <label>Other Speaker</label>
    <length>50</length>
    <type>Text</type>
</CustomField>