fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Others_Present_for_In_Service__c.field-meta.xml
<CustomField>
    <fullName>Others_Present_for_In_Service__c</fullName>
    <label>Others Present for Hemorrhage In-Service</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CE</fullName>
            </value>
            <value>
                <fullName>MSR</fullName>
            </value>
            <value>
                <fullName>RSM</fullName>
            </value>
            <value>
                <fullName>Clinical Affairs</fullName>
            </value>
            <value>
                <fullName>Clinical Advisor</fullName>
            </value>
            <value>
                <fullName>CEM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>