fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/OtherVendorCredentialing__c.field-meta.xml
<CustomField>
    <fullName>OtherVendorCredentialing__c</fullName>
    <formula>Account_Facility__r.OtherVendorCredentialing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Vendor Credentialing</label>
    <type>Text</type>
</CustomField>