fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Pending_CRF__c.field-meta.xml
<CustomField>
    <fullName>Pending_CRF__c</fullName>
    <label>Pending CRF</label>
    <summaryFilterItems>
        <field>CE_Reimbursement_Expense__c.Status__c</field>
        <operation>equals</operation>
        <value>Save</value>
    </summaryFilterItems>
    <summaryForeignKey>CE_Reimbursement_Expense__c.Education_Record__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>