fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Physical_Address__c.field-meta.xml
<CustomField>
    <fullName>Physical_Address__c</fullName>
    <label>Physical Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>