fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/PlaceonHold__c.field-meta.xml
<CustomField>
    <fullName>PlaceonHold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Place on Hold</label>
    <type>Checkbox</type>
</CustomField>