fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/PM_Tissue__c.field-meta.xml
<CustomField>
    <fullName>PM_Tissue__c</fullName>
    <label>PM Tissue</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>