fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Policy_Protocol_Procedure_Vetting__c.field-meta.xml
<CustomField>
    <fullName>Policy_Protocol_Procedure_Vetting__c</fullName>
    <label>Policy/Protocol/Procedure in place?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Arterial</fullName>
            </value>
            <value>
                <fullName>PICC</fullName>
            </value>
            <value>
                <fullName>VPS</fullName>
            </value>
            <value>
                <fullName>EZ-IO</fullName>
            </value>
            <value>
                <fullName>CVC-JACC-AHD</fullName>
            </value>
            <value>
                <fullName>Midlines</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>