fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Policy_Submitted_for_Review_Vetting__c.field-meta.xml
<CustomField>
    <fullName>Policy_Submitted_for_Review_Vetting__c</fullName>
    <label>Policy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>