fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Preceptorship_Associated_Date__c.field-meta.xml
<CustomField>
    <fullName>Preceptorship_Associated_Date__c</fullName>
    <label>Preceptorship Associated Date</label>
    <type>Date</type>
</CustomField>