fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Preceptorship_Associated_Department__c.field-meta.xml
<CustomField>
    <fullName>Preceptorship_Associated_Department__c</fullName>
    <label>Preceptorship Associated Department</label>
    <length>50</length>
    <type>Text</type>
</CustomField>