fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Preceptorship_Associated_with_Lab__c.field-meta.xml
<CustomField>
    <fullName>Preceptorship_Associated_with_Lab__c</fullName>
    <label>Preceptorship Associated with Lab?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>