fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Product_Details__c.field-meta.xml
<CustomField>
    <fullName>Product_Details__c</fullName>
    <description>Case 00009573</description>
    <inlineHelpText>Fill in product details if applicable.</inlineHelpText>
    <label>Product Details</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>