fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Product_Ship_Address__c.field-meta.xml
<CustomField>
    <fullName>Product_Ship_Address__c</fullName>
    <formula>IF(ISBLANK( Ship_Product_Materials_to__c) , &quot;&quot;, Ship_Product_Materials_to__r.Mailing_Address__c&amp;&quot;, &quot;&amp; Ship_Product_Materials_to__r.Mailing_City__c&amp; &quot;, &quot;&amp; Ship_Product_Materials_to__r.Mailing_State__c&amp;&quot; &quot;&amp;  Ship_Product_Materials_to__r.Mailing_Zip__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>