fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Lkup</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2 AND 3 AND 4)</booleanFilter>
        <filterItems>
            <field>Programs__c.Business_Unit__c</field>
            <operation>equals</operation>
            <valueField>$Source.Business_Unit__c</valueField>
        </filterItems>
        <filterItems>
            <field>Programs__c.Products__c</field>
            <operation>contains</operation>
            <valueField>$Source.Primary_Product__c</valueField>
        </filterItems>
        <filterItems>
            <field>Programs__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$Source.Copy_RecordType__c</field>
            <operation>contains</operation>
            <valueField>Programs__c.Program_Type__c</valueField>
        </filterItems>
        <infoMessage>Reminder:  To view available programs for the primary product, select ALL FIELDS, enter ALL in the search field and click the GO! button</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Programs__c</referenceTo>
    <relationshipLabel>Education Records</relationshipLabel>
    <relationshipName>Education_Records</relationshipName>
    <type>Lookup</type>
</CustomField>