fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Program_Link__c.field-meta.xml
<CustomField>
    <fullName>Program_Link__c</fullName>
    <formula>IF( Contains(Program__r.Name, &quot;Opera&quot;),


HYPERLINK(&quot;https://teleflex.my.salesforce.com/06944000003b1AW?retUrl=%2F_ui%2Fcore%2Fchatter%2Ffiles%2FFileTabPage&quot;, &quot;OPERA PROGRAM --- Please download the file and attach to the Education Record upon completion&quot;), &quot; &quot; )</formula>
    <label>Program Link</label>
    <type>Text</type>
</CustomField>