fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Type__c</fullName>
    <formula>TEXT(Program__r.Program_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Type fx</label>
    <type>Text</type>
</CustomField>