fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/ProgramType2__c.field-meta.xml
<CustomField>
    <fullName>ProgramType2__c</fullName>
    <label>Program Type 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-service</fullName>
            </value>
            <value>
                <fullName>Product Training/Simulation</fullName>
            </value>
            <value>
                <fullName>Case Coverage</fullName>
            </value>
            <value>
                <fullName>CEU</fullName>
            </value>
            <value>
                <fullName>Didactic Dinner</fullName>
            </value>
            <value>
                <fullName>Proctorship</fullName>
            </value>
            <value>
                <fullName>Tradeshow Sponsorship</fullName>
            </value>
            <value>
                <fullName>Product Development (Mktg/R&amp;D Only)</fullName>
            </value>
            <value>
                <fullName>Evaluation</fullName>
            </value>
            <value>
                <fullName>Implementation (no Eval Needed)</fullName>
            </value>
            <value>
                <fullName>Implementation (Eval Complete)</fullName>
            </value>
            <value>
                <fullName>Follow-up Training</fullName>
            </value>
            <value>
                <fullName>Speaker Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>