fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/ReasonforContractorRequest__c.field-meta.xml
<CustomField>
    <fullName>ReasonforContractorRequest__c</fullName>
    <label>Reason for Contractor Request 1:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal Resource not Available</fullName>
            </value>
            <value>
                <fullName>Subject Matter Expert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>