fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Recommended_Hotel_2nd_Choice__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Hotel_2nd_Choice__c</fullName>
    <label>Recommended Hotel: 2nd Choice</label>
    <length>50</length>
    <type>Text</type>
</CustomField>