fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/RecordAge__c.field-meta.xml
<CustomField>
    <fullName>RecordAge__c</fullName>
    <label>Record Age</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>