fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region text</label>
    <length>50</length>
    <type>Text</type>
</CustomField>