fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/RequestClinicalEducationContractor2__c.field-meta.xml
<CustomField>
    <fullName>RequestClinicalEducationContractor2__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please click this box if you are in need of a contractor to complete this training. Also please put their Full Name in the &quot;Suggested Contractor &quot; Fields</inlineHelpText>
    <label>Suggested Clinical Education Contractor2</label>
    <type>Checkbox</type>
</CustomField>