fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Requested_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Requested_Contractor__c</fullName>
    <label>Suggested Contractor</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>