fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Requested_Date_3rd_Choice__c.field-meta.xml
<CustomField>
    <fullName>Requested_Date_3rd_Choice__c</fullName>
    <label>Requested Date 3rd Choice</label>
    <type>Date</type>
</CustomField>