fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/RequestReceivedfromAccount__c.field-meta.xml
<CustomField>
    <fullName>RequestReceivedfromAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request Received from Account</label>
    <type>Checkbox</type>
</CustomField>