fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Responsible_CEM__c.field-meta.xml
<CustomField>
    <fullName>Responsible_CEM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsible CEM</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>contains</operation>
            <value>Clinical Team</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Education_Records</relationshipName>
    <type>Lookup</type>
</CustomField>