fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Return_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Return_Date_Time__c</fullName>
    <inlineHelpText>Enter Return Date and Preferred Time</inlineHelpText>
    <label>Return Date/Time</label>
    <type>DateTime</type>
</CustomField>