fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Roster_Attached__c.field-meta.xml
<CustomField>
    <fullName>Roster_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Roster Attached</label>
    <type>Checkbox</type>
</CustomField>