fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/RSM__c.field-meta.xml
<CustomField>
    <fullName>RSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RSM</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>contains</operation>
            <value>RSM, Executive</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Education_Records1</relationshipName>
    <type>Lookup</type>
</CustomField>