fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/RSM_Cell__c.field-meta.xml
<CustomField>
    <fullName>RSM_Cell__c</fullName>
    <formula>RSM__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RSM Cell</label>
    <type>Text</type>
</CustomField>