fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Representative</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Education_Records2</relationshipName>
    <type>Lookup</type>
</CustomField>