fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Sales_Rep_to_provide_kits__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_to_provide_kits__c</fullName>
    <label>Sales Rep to provide kits</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Kits_Required__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>