fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/SAP__c.field-meta.xml
<CustomField>
    <fullName>SAP__c</fullName>
    <formula>Account_Facility__r.SAP_Sold_To__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP#</label>
    <type>Text</type>
</CustomField>