fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Second_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Second_Street_Address__c</fullName>
    <label>Street Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>